# disk-partition-tools

./: CMakeLists.txt  README.md
include/disk-partition-tools/: efi-guid.h  gpt-header.h  gpt-partition-entry.h  mbr-partition-entry.h  mbr-sector.h  options.h  utils.h
src/: gpt.cc  mbr.cc  utils.cc
